--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "mysql2": "^2.3.0",
     "nodemailer": "^6.6.5",
     "sequelize": "^6.6.5"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.13"
   }
 }
