--- a/.env
+++ b/.env
@@ -8,3 +8,8 @@ DB_PORT=3306
 
 AUTH_SECRET=alkemy
 AUTH_EXPIRE=1d
+
+MAIL_HOST=smtp.gmail.com
+MAIL_USER=workabrahamrlvas@gmail.com
+MAIL_PASSWORD=bmvlrxcpaywhchpm
+MAIL_FROM=workabraham@gmail.com
